font sizes adjust on screen size and alignment corrected

--- a/src/assets/css/_happybirthdayvideo.css
+++ b/src/assets/css/_happybirthdayvideo.css
@@ -65,8 +65,8 @@
     font-family: canada-type-gibson, sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: calc(12px + (18 - 12) * ((100vw - 300px) / (1440 - 300)));
-    color: white;
+    color: #fff;
+    font-size: 1.3vw;
 }
 
 .hero-content{
