--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -102,7 +102,7 @@ body {
     left: 85%;
     right: 0;
     top: 40%;
-    font-size: 0.7vw;
+    font-size: 0.9vw;
     color:#fff;
     text-transform: uppercase;
     font-family: quatro, sans-serif;
@@ -112,7 +112,7 @@ body {
     position: absolute;
     left: 83%;
     right: 0;
-    top: 38%;
+    top: 41%;
     font-size: .8vw;
     color:#fff;
     text-transform: uppercase;
@@ -121,7 +121,12 @@ body {
 
 /*New styles*/
 @media screen and (max-width: 920px) and (min-width: 769px){
+    
 
+    .text-test {
+        
+        top: 42%;
+    }
 }
 
 @media (max-width: 768px) {
@@ -275,20 +280,20 @@ body {
 
     .text-test {
 
-    position: absolute;
-    left: 75%;
-    right: 0;
-    top: 35%;
-    font-size: 0.8vw;
-    color:#fff;
-    text-transform: capitalize;
+        position: absolute;
+        left: 73%;
+        right: 0%;
+        top: 40%;
+        font-size: 1.7vw;
+        color: #fff;
+        text-transform: uppercase;
     }
 
     .nav-text{
         position: absolute;
         left: 69%;
         right: 0;
-        top: 39%;
+        top: 41%;
         font-size: 1.8vw;
         color:#fff;
         text-transform: uppercase;
@@ -315,15 +320,25 @@ body {
 
 /* Extra Small Devices, Phones */ 
 @media only screen and (max-width : 480px) {
-   
+    .nav-text {
+        top: 41%;
+    }
+
+    .watch-now-text {
+        
+        font-size: 1.7vw;
+        right: 48%;
+    }
 
 }
 
 
  /* Large Devices, Wide Screens */
  @media only screen and (max-width : 1200px) {
-
+    
+    
 }
+
 
 /* Medium Devices, Desktops */
 @media only screen and (max-width : 992px) {
